--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,7 +2,34 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  padding: 5rem;
+  height: 100vh;
+}
+
+.section {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  width: 100%;
+}
+
+.textarea {
+  color: #333;
+  font-size: 1.125rem;
+  flex-grow: 1;
+  overflow-y: scroll;
+  border: 1px solid #333;
+  padding: 1rem;
+  box-sizing: border-box;
+}
+
+.input {
+  padding: 2rem 0;
+}
+
+.actions {
+  display: flex;
+  justify-content: flex-start;
+  padding: 1rem 0;
+  column-gap: 1rem;
 }
